# cmake-shared-lib-tutorial

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: platform_defines.cmake
src/cxx/exe/: CMakeLists.txt  main.cpp  main.hpp
src/cxx/lib/: CMakeLists.txt
src/cxx/lib/private/: mylib.cpp
src/cxx/lib/public/: mylib.h
